test/libsolidity/syntaxTests/nameAndTypeResolution/448_no_unused_dec_after_use.sol
contract C {
    function f() pure public {
        a = 7;
        uint a;
    }
}
// ----
// DeclarationError: (52-53): Undeclared identifier. Did you mean "a"?
